added animate css, css styling to navbar, css to other areas of page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,7 @@
     <!--link to boostrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">   
+    <link rel="stylesheet" href="animate.min.css">
     <title>Portfolio React</title>
   </head>
   <body>
