removed professional links from dropdown and placed as icons in the footer

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,14 +24,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!--link to boostrap-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">   
-    <link rel="stylesheet" href="animate.min.css">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
+    />
+    <!--Link for animate.css.  Code that is written fro specific classes that will animate elements-->
+    <link rel="stylesheet" href="animate.min.css" />
     <title>Portfolio React</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-   
   </body>
 </html>
