--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,7 +33,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
     />
     <!--Link for animate.css.  Code that is written fro specific classes that will animate elements-->
-    <link rel="stylesheet" href="animate.min.css" />
+    <link rel="stylesheet" type="text/CSS" href="animate.min.css" />
     <title>Portfolio React</title>
   </head>
   <body>
