fixed text/css error in console

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,14 +26,16 @@
     <!--link to boostrap-->
     <link
       rel="stylesheet"
+      type="text/css"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
+      type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
     />
     <!--Link for animate.css.  Code that is written fro specific classes that will animate elements-->
-    <link rel="stylesheet" type="text/CSS" href="animate.min.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="animate.min.css" /> -->
     <title>Portfolio React</title>
   </head>
   <body>
